--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-server', version: '1.4.7.RELEASE'
+    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-server'
+    compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
 }
