--- a/eureka-server/build.gradle
+++ b/eureka-server/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compile group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-server'
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-security'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-netflix-eureka-server'
 }
